<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="result">Result</string>
    <string name="kg">KG</string>
    <string name="cm">cm</string>
    <string name="reset">Reset</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="bmi">BMI = ?</string>
</resources>